hexagon z-index fix

--- a/menu-components/src/components/hex-menu/hex-menu.css
+++ b/menu-components/src/components/hex-menu/hex-menu.css
@@ -135,7 +135,7 @@
   position: relative;
   transition: var(--hex-transition);
   width: var(--hex-width);
-  z-index: var(--set-layer, 1000);
+  z-index: 1000;
 }
 
 .hexagon::after,
